--- a/notebooks/MeeetingAnalysis.ipynb
+++ b/notebooks/MeeetingAnalysis.ipynb
@@ -9,7 +9,20 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from azure_playground.utils.video_downloader import VideoDownloader"
+    "from azure_playground.utils.video_downloader import VideoDownloader\n",
+    "from azure_playground.utils.video_frame_sampler import VideoFrameSampler, Frame\n",
+    "from azure_playground.utils.video_frame_analyzer import VideoFrameAnalyzer\n",
+    "from azure_playground.instructions.video_frame_analysis import VideoFrameAnalysis, VideoFrameAnalysisResult\n",
+    "from azure_playground.models.llms.azure_openai import AzureOpenAI\n",
+    "from typing import List\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "from os import getenv\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -26,9 +39,70 @@
    "outputs": [],
    "source": [
     "VideoDownloader.download(\n",
-    "    url=\"https://www.youtube.com/watch?v=WYMgl3JLJ4E\",\n",
+    "    url=\"https://www.youtube.com/watch?v=WYMgl3JLJ4E\", # url of the video - this is a Teams meeting recording\n",
     "    output_path=\"../data/videos\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sample video frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler: VideoFrameSampler = VideoFrameSampler(\n",
+    "    input=r\"../data/videos/Plan ｜ Weekly Sync 2022-08-03 Part 2.mp4\",\n",
+    "    output=r\"../data/frames\",\n",
+    ")\n",
+    "frames: List[Frame] = sampler.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyze video frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "analyzer: VideoFrameAnalyzer = VideoFrameAnalyzer(\n",
+    "    instruction=VideoFrameAnalysis(),\n",
+    "    model=AzureOpenAI(\n",
+    "        endpoint=getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
+    "        api_key=getenv(\"AZURE_OPENAI_API_KEY\")\n",
+    "    )\n",
+    ")\n",
+    "analyses: List[VideoFrameAnalysisResult] = await analyzer.analyze(frames)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect frames and analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, analysis in enumerate(analyses):\n",
+    "    print(analysis.model_dump_json(indent=2))\n",
+    "    print(frames[index].view())"
    ]
   },
   {
