--- a/notebooks/MeeetingAnalysis.ipynb
+++ b/notebooks/MeeetingAnalysis.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, analysis in enumerate(analyses[:-2]):\n",
+    "for index, analysis in enumerate(analyses):\n",
     "    print(analysis.model_dump_json(indent=2))\n",
     "    print(frames[index].view())"
    ]
